# Advanced-Graphics

./: .gitignore  AdvancedGraphicsConfig.hpp.in  CMakeLists.txt  HDRimage  HDRimageConfig.hpp.in  README.md  README.md~  install  install.sh  relightning
.Sublime/: untitled.sublime-project  untitled.sublime-workspace
CMake/Compiler/: Compiler.cmake
CMake/cpp11/: CheckCXX11Features.cmake  CheckCXX11Features.cmake~
Report/CO417-HW1/: HDRimage  README  relightning
Report/CO417-HW1/sources/: AdvancedGraphicsConfig.hpp.in  CMakeLists.txt  README.md
Report/CO417-HW1/sources/CMake/Compiler/: Compiler.cmake
Report/CO417-HW1/sources/src/: HDRimage.hpp  Sphere.hpp
Report/Specs/CO417-HW1/ExampleCode/: Untitled Document  a.out  loadPNM.cpp  main.cpp  main.cpp~
doc/: report_1.aux  report_1.out  report_1.tex
doc/Specs/CO417-HW1/ExampleCode/: main.cpp
doc/Specs/CO417-HW2/Fresnel/: fig2.eps
doc/report 1/: biblio.bib  report_1.toc
doc/report 2/: README  biblio.bib  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.lof  report.toc
doc/report 2/pictures/: fig1.eps
include/: HDRimage (pixel34.doc.ic.ac.uk's conflicted copy 2013-01-30).hpp  HDRimage.hpp
part1/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindow_pt1.cpp  mainwindow_pt1.hpp  question1.cpp
part1.1/: mainwindow_pt1.ui
part1.2/: mainwindow_pt2.cpp  question2.cpp
part2/: mainwindow_pt2.cpp  mainwindow_pt2.hpp  mainwindow_pt2.ui  question2.cpp
part2.2/: question1.cpp
part2.3/: question2.cpp  question3.cpp
part2.4/: question4.cpp
src/: BRDF.cpp  BRDF.hpp  HDRimage.cpp~  HDRimage.hpp  HDRimage_io.cpp  HDRimage_processing.cpp  Phong.cpp  Phong.hpp  Rand.cpp  Rand.hpp  Sphere.hpp  main.cpp  sphere.cpp
src/Rand/: Random.hpp  Uniform.hpp
